{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 91,
  "lineage": "26bf478e-b866-ca77-7551-672e7e4edf11",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "rblab-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/networkInterfaces/rblab-nic",
            "internal_domain_name_suffix": "5gtkn1kt34quvesufm04numdrc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/publicIPAddresses/rblab-ip",
                "subnet_id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/virtualNetworks/rblab-network/subnets/rblab-subnet"
              }
            ],
            "location": "eastus",
            "name": "rblab-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "rblab-resources",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.rblab-ip",
            "azurerm_resource_group.rblab-rg",
            "azurerm_subnet.rblab-subnet",
            "azurerm_virtual_network.rblab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "rblab-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "location": "eastus",
            "name": "mtc-sg",
            "resource_group_name": "rblab-resources",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rblab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rblab-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rblab-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rblab-sg",
            "azurerm_resource_group.rblab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "rblab-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/publicIPAddresses/rblab-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "rblab-ip",
            "resource_group_name": "rblab-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rblab-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "rblab-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/virtualNetworks/rblab-network/subnets/rblab-subnet",
            "name": "rblab-subnet",
            "resource_group_name": "rblab-resources",
            "virtual_network_name": "rblab-network"
          },
          "dependencies": [
            "azurerm_resource_group.rblab-rg",
            "azurerm_virtual_network.rblab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "rblab-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/virtualNetworks/rblab-network/subnets/rblab-subnet",
            "network_security_group_id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-sg",
            "subnet_id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/virtualNetworks/rblab-network/subnets/rblab-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.rblab-sg",
            "azurerm_resource_group.rblab-rg",
            "azurerm_subnet.rblab-subnet",
            "azurerm_virtual_network.rblab-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "rblab-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eda6a6f9-ef53-4aa1-9254-2b35e6d1838a",
            "id": "/subscriptions/7a8e4ab9-c585-4039-b258-831d54ea121f/resourceGroups/rblab-resources/providers/Microsoft.Network/virtualNetworks/rblab-network",
            "location": "eastus",
            "name": "rblab-network",
            "resource_group_name": "rblab-resources",
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rblab-rg"
          ]
        }
      ]
    }
  ]
}